<resources>
    <string name="app_name">StudentApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login</string>
    <string name="signup_fragment_label">Signup</string>

    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="previous">Previous</string>
    <string name="user_login">User Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="id">ID</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="as_admin">I am an admin</string>

    <string name="events">Events</string>

    <!-- Dashboard page -->
    <string name="see_all">See All</string>
    <string name="title1">Recent Announcements</string>
    <string name="title2">Upcoming Events</string>
    <string name="checkPost">Check POSt</string>
    <string name="complaint">Submit Complaint</string>
    <string name="announcementDefaultTitle">No Current Announcement</string>
    <string name="eventDefaultTitle">No Current Event</string>
    <string name="noText"></string>

    <!-- Complaints page-->
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <!-- View Complaints page-->
    <string name="see_detail">See Detail</string>
    <string name="back">Back</string>
    <string name="by">By:</string>
    <string name="on">On:</string>
    <string name="delete">Delete</string>
    <string name="back_to_dashboard">Back</string>

    <!-- Check POSt page-->
    <string name="check_post">Check POSt</string>
    <string name="check_post_desc">Answer a few questions to check your POSt eligibility.</string>
    <string name="check_post_q1">Choose a subject POSt</string>
    <string name="A31">Enter MATA31 GPA:</string>
    <string name="A67">Enter MATA67 GPA:</string>
    <string name="A22">Enter MATA22 GPA:</string>
    <string name="A37">Enter MATA37 GPA:</string>
    <string name="A48">Enter CSCA48 GPA:</string>
    <string name="A08">Enter CSCA08 GPA:</string>
    <string name="invalid">Invalid Input</string>
    <string name="notQualify">You do not Qualify.</string>
    <string name="qualify">You Qualify!</string>
    <string name="check">Check</string>
    <string name="GPAHint">e.g 3.0</string>

    <string-array name="items">
        <item>Computer Science</item>
        <item>Mathematics Major</item>
        <item>Mathematics Specialist</item>
        <item>Statistics Major</item>
        <item>Statistics Specialist</item>
    </string-array>


    <string name="lorem_ipsum">
        lmao
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>